# Gipfelkreuzer

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  release-plz.toml  rustfmt.toml
.github/workflows/: release.yml  release_pr.yml  rust_build_test.yml
benchmark/: Cargo.toml
benchmark/src/: monotonicity.rs
src/: arguments.rs  error.rs  input.rs  main.rs  output.rs  peaks.rs  test_utils.rs
src/peaks/: gipfelkreuzer.rs  harmoniser.rs  simple.rs  tests.rs
test_resources/: input_test_invalid_data_start_end.narrowPeak  input_test_invalid_data_summit.narrowPeak  input_test_invalid_end.narrowPeak  input_test_invalid_not_enough_fields.narrowPeak  input_test_invalid_start.narrowPeak  input_test_invalid_summit.narrowPeak  input_test_invalid_utf8.narrowPeak  input_test_main_internal_input_01.narrowPeak  input_test_main_internal_input_01_simple_min.narrowPeak  input_test_main_internal_input_02.narrowPeak  input_test_main_internal_input_iter_01.narrowPeak  input_test_valid_minimal.narrowPeak  input_test_valid_with_summit.narrowPeak  input_test_valid_with_summit_additional_features.narrowPeak  input_test_valid_with_summit_multiple_01.narrowPeak  input_test_valid_with_summit_multiple_02.narrowPeak  input_test_valid_with_summit_multiple_03.narrowPeak
test_resources/tmp/: test_main_internal_input.bed
wix/: main.wxs
