[package]
name = "Gipfelkreuzer"
version = "1.0.0"
edition = "2024"
authors = ["at-robins"]
description = "Creates consensus peaks from raw peaks called on ChIP- or ATAC-Seq data."
repository = "https://github.com/at-robins/Gipfelkreuzer"
homepage = "https://github.com/at-robins/Gipfelkreuzer"

[package.metadata.wix]
upgrade-guid = "7094528E-7912-4AA9-896F-9A57F165D404"
path-guid = "0EF67315-736F-4F98-AF39-5D3EECB42F2C"
license = false
eula = false

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
getset = "0.1.6"
serde = { version = "1.0.228", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
